# lazy-robot-loader

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
src/lazy_robot_loader/: core.py  lerobot.py
src/lazy_robot_loader/lerobot/: __init__.py  core.py  dataset.py  query.py
src/lazy_robot_loader/lerobot/internal/: functional.py  query.py
tests/: test_bench.py  test_lerobot.py  test_query.py
